fixed spacing of login button

--- a/frontend/src/css/buttons.css
+++ b/frontend/src/css/buttons.css
@@ -160,6 +160,7 @@
         align-items: center;
         justify-content: space-between;
         margin-left: 20px;
+        margin-bottom: 8px;
     }
 }
 
